Fix mobile scaling (Navbar and categories fix-ups) Collaps or hide navbar buttons at certain breakpoints. Categories max width to 900px (match max width of search results elems).

--- a/public/css/_categories.scss
+++ b/public/css/_categories.scss
@@ -83,7 +83,9 @@
         
         max-height: 256px;
         width: 100%;
-        
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
         & > #categories {
             position: relative;
             width: 100%;
