--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -65,3 +65,59 @@ header .h_button.icon_only {
         display: none;
     }
 }
+@media only screen and (max-width: 400px) {
+    #navbar {
+        & .button,
+        & button {
+            &:not(#about):not(.swap_palette) {
+                display: none;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 450px) {
+    #navbar {
+        & .button,
+        & button {
+            span.text {
+                display: none;
+            }
+            // width: 24px;
+            & .material-icons {
+                
+                // visibility: visible;
+            }
+            &#about {
+                
+                &::before {
+                    font-family: 'Material Icons';
+                    font-weight: normal;
+                    font-style: normal;
+                    font-size: 24px;
+                    line-height: 1;
+                    letter-spacing: normal;
+                    text-transform: none;
+                    display: inline-block;
+                    white-space: nowrap;
+                    word-wrap: normal;
+                    direction: ltr;
+                    -webkit-font-feature-settings: 'liga';
+                    -webkit-font-smoothing: antialiased;
+                    
+                    width: 24px;
+                    content: "info"
+                }
+                
+            }
+        }
+    }
+}
+@media only screen and (max-width: 512px) {
+    #navbar {
+        & .swap_palette {
+            span.text {
+                display: none;
+            }
+        }
+    }
+}
