--- a/public/css/core_style.css
+++ b/public/css/core_style.css
@@ -60,6 +60,38 @@ header .h_button.icon_only {
     display: none;
   }
 }
+@media only screen and (max-width: 400px) {
+  #navbar .button:not(#about):not(.swap_palette), #navbar button:not(#about):not(.swap_palette) {
+    display: none;
+  }
+}
+@media only screen and (max-width: 450px) {
+  #navbar .button span.text, #navbar button span.text {
+    display: none;
+  }
+  #navbar .button#about::before, #navbar button#about::before {
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: "liga";
+    -webkit-font-smoothing: antialiased;
+    width: 24px;
+    content: "info";
+  }
+}
+@media only screen and (max-width: 512px) {
+  #navbar .swap_palette span.text {
+    display: none;
+  }
+}
 button > p {
   margin-top: auto;
   margin-bottom: auto;
